src/test/deca/context/invalid/operation-binaire-equals-wrong-class.deca
// Description:
//    Test 3.33 fail avec equals avec une string et un objet d'une classe
//
// Resultats:
//    Ligne 14: A class (or null) can only be compared to another class (rule 3.33)
//
// Historique:
//    cree le 06/01/2023

class A{}

{
    A a;
    a == "hello world";
}